--- a/index.html
+++ b/index.html
@@ -10,11 +10,14 @@
     <h1 id="titulo">Matemática</h1>
     <h2 id="titulo1">Minhas turmas</h2>
 
-    <p class="paragrafo">É comum que estudantes não entendam como a <strong>MATEMÁTICA</strong> mais complexa – para além de operações de soma ou multiplicação – se relaciona com a vida cotidiana. Isso ocorre em grande parte porque as aulas com frequência se mantêm no plano teórico. Embora a matemática seja essencial para desenvolver o pensamento abstrato, é mais fácil absorver o conteúdo quando ele está ancorado em experiências concretas da vida do aluno. Assim, a abordagem da matemática pela via da tecnologia torna o conteúdo mais interessante para os jovens, levando para o plano abstrato problemas que eles encontram no dia a dia, como a interação constante com algoritmos nas redes sociais, sites de notícias e propagandas online.</p> 
-        <ul><img class="turmas" src="6 ano.jpg" alt="imagem 6 ano">
-        <li>Aghata</li>
-        <li>Eloisa</li></ul>
-        <ul><img src="7 ano.jpg" alt="imagem 7 ano"></ul>
+    <section class="alunos">
+        <p class="paragrafo">É comum que estudantes não entendam como a <strong>MATEMÁTICA</strong> mais complexa – para além de operações de soma ou multiplicação – se relaciona com a vida cotidiana. Isso ocorre em grande parte porque as aulas com frequência se mantêm no plano teórico. Embora a matemática seja essencial para desenvolver o pensamento abstrato, é mais fácil absorver o conteúdo quando ele está ancorado em experiências concretas da vida do aluno. Assim, a abordagem da matemática pela via da tecnologia torna o conteúdo mais interessante para os jovens, levando para o plano abstrato problemas que eles encontram no dia a dia, como a interação constante com algoritmos nas redes sociais, sites de notícias e propagandas online.</p> 
+            <ul><img class="turmas" src="6 ano.jpg" alt="imagem 6 ano">
+                <li>Aghata</li>
+                <li>Eloisa</li></ul>
+            <ul><img src="7 ano.jpg" alt="imagem 7 ano"></ul>
+    </section>
+
         <ol>
             <li>Alexandre</li>
         </ol>
