--- a/index.html
+++ b/index.html
@@ -17,12 +17,23 @@
                     <li>Aghata</li>
                     <li>Eloisa</li>
                     <li>Emily</li>
-                    <li>Diogo</li></ul></div>
+                    <li>Diogo</li></ul>
+        </div>
      </section>
+
+        <div class="setimo">
                 <ul><img src="7 ano.jpg" alt="imagem 7 ano"></ul>
-         <ol>
-            <li>Alexandre</li>
-        </ol>
+                    <ol>
+                        <li>Alexandre</li>
+                        <li>Ataide</li>
+                        <li>Carlos</li>
+                        <li>Erik</li>
+                        <li>Gabriel</li>
+                        <li>Haiany</li>
+                        <li>Helton</li>
+                        <li>Kallel</li>
+                                           </ol>
+        </div>
     <br> 
     <p class="paragrafo">De acordo com a <B>BNCC</B>, o <Em>pensamento computacional</Em> <strong><em>“envolve as capacidades de compreender, analisar, definir, modelar, resolver, comparar e automatizar problemas e suas soluções, de forma metódica e sistemática, por meio do desenvolvimento de algoritmos”</em></strong>. Seria compreensível supor que, por terem nascido na era digital, os estudantes de hoje já saberiam “naturalmente” navegar no novo mundo hiperconectado em que vivemos. Porém, a experiência digital dos usuários não é precisamente “na internet”, mas “em plataformas”. Não temos a menor ideia de como os sistemas digitais são organizados, temos apenas o conhecimento de como pedir uma viagem por aplicativo, encomendar uma refeição, postar e curtir nas redes sociais, enviar mensagens etc. Se alguém nos pedisse uma explicação sobre o funcionamento da internet, porém, a maioria de nós não saberia nem por onde começar. O mesmo ocorre com os alunos, que precisam aprender a enxergar o que está abaixo da superfície da Internet.</p>  
 </body>
