--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header class="cabecalho">
+        <h2> Colégio EstadualdoCampo Otávio Folda</h2>
+    </header>
     <img id="logo" src="logomatematica.jpg" alt="logo pagina">
     <h1 id="titulo">Matemática</h1>
     <h2 id="titulo1">Minhas turmas</h2>
@@ -39,5 +42,4 @@
     <p class="paragrafo">De acordo com a <B>BNCC</B>, o <Em>pensamento computacional</Em> <strong><em>“envolve as capacidades de compreender, analisar, definir, modelar, resolver, comparar e automatizar problemas e suas soluções, de forma metódica e sistemática, por meio do desenvolvimento de algoritmos”</em></strong>. Seria compreensível supor que, por terem nascido na era digital, os estudantes de hoje já saberiam “naturalmente” navegar no novo mundo hiperconectado em que vivemos. Porém, a experiência digital dos usuários não é precisamente “na internet”, mas “em plataformas”. Não temos a menor ideia de como os sistemas digitais são organizados, temos apenas o conhecimento de como pedir uma viagem por aplicativo, encomendar uma refeição, postar e curtir nas redes sociais, enviar mensagens etc. Se alguém nos pedisse uma explicação sobre o funcionamento da internet, porém, a maioria de nós não saberia nem por onde começar. O mesmo ocorre com os alunos, que precisam aprender a enxergar o que está abaixo da superfície da Internet.</p>  
 </body>
 </html>
-
 
